Fixed arrow and text overlapping in <select>:

--- a/css/custom-inputs/select.css
+++ b/css/custom-inputs/select.css
@@ -16,6 +16,7 @@ select {
 	
 	box-sizing: border-box;
 	padding: var(--section-padding);
+	padding-right: calc(var(--section-padding) + 15px); /* for arrow */
 	margin-top: var(--text-margin);
 	margin-bottom: var(--text-margin);
 
@@ -40,6 +41,10 @@ select:focus:not([disabled]) {
 	background-color: var(--color-input-secondary);
 }
 
+select[multiple] {
+	padding-right: var(--section-padding); /* use arrow space */
+}
+
 /* A triangle on the select to show that it's a select */
 select:not([multiple]):not([disabled]) {
 	background-image: linear-gradient(45deg, transparent 50%, currentColor 50%),
@@ -52,6 +57,7 @@ select:not([multiple]):not([disabled]) {
 section.select-fake-filler {
 	box-sizing: border-box;
 	padding: var(--section-padding);
+	padding-right: calc(var(--section-padding) + 15px); /* for arrow */
 	display: none;
 	color: transparent;
 	z-index: -9999;
